<?xml version="1.0"?>
<package format="3">
  <name>robot_hw</name>
  <version>0.0.0</version>
  <description>The robot_hw package</description>
  <maintainer email="limx@limxdynamics.com">limxdynamics</maintainer>
  <author email="limx@limxdynamics.com">limxdynamics</author>
  <license>TODO</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>realtime_tools</depend>
  <depend>hardware_interface</depend>
  <depend>controller_manager</depend>
  <depend>controller_manager_msgs</depend>
  <depend>urdf</depend>
  <build_depend>limxsdk_lowlevel</build_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
